rename to match new name of kata

--- a/csharp/BuildPipelineTests/BuildPipelineTests.csproj
+++ b/csharp/BuildPipelineTests/BuildPipelineTests.csproj
@@ -17,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\UntangledConditionals\UntangledConditionals.csproj" />
+      <ProjectReference Include="..\BuildPipeline\BuildPipeline.csproj" />
     </ItemGroup>
 
 </Project>
