--- a/cpp/.gitignore
+++ b/cpp/.gitignore
@@ -1,6 +1,4 @@
-*~
-.idea
-build
-cmake-build-debug
-cmake-build-release
-
+/build_meson/
+/subprojects/Catch2-*/
+/subprojects/packagecache/
+/cmake-build-*/
